SERVER-82469 The `serverStatus` command incorrectly returns that a server config always acts as shard